--- a/views/apidemo.ejs
+++ b/views/apidemo.ejs
@@ -16,7 +16,7 @@
     >
       ACCESS TOKEN
     </button>
-    <p id="demo" style="color: orange"></p>
+    <p id="demo" style="color: red"></p>
     <p id="demo1" style="color: yellow"></p>
     <body>
       <h3>Enter Dataextension Name</h3>
