--- a/views/apidemo.ejs
+++ b/views/apidemo.ejs
@@ -4,7 +4,7 @@
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.0/axios.min.js"
       integrity="sha512-DZqqY3PiOvTP9HkjIWgjO6ouCbq+dxqWoJZ/Q+zPYNHmlnI2dQnbJ5bxAHpAMw+LXRm4D72EIRXzvcHQtE8/VQ=="
-      crossorigin="anonymous"
+      crossorigin=""
     ></script>
     <title>OutPut Page</title>
     <!-- <script src="/src/SfmcApiHelper.ts"></script> -->
